# capa_v3-r

./: .gitignore  .gitmodules  README.md  agent.py  arena_v3.py  build.bat  prompts.json  requirements.txt
affective/: engine.py  logger.py
cognitive/: layers.py
cpp_core/: CMakeLists.txt
cpp_core/scr/: main.cpp  short_term_memory.cpp  short_term_memory.h
cpp_core/src/: main.cpp  short_term_memory.cpp  short_term_memory.h
db/: chroma.sqlite3
journals/: ltm_journal.wal
memory/: listener.py  man.py  stm_manager.py  subsystem.py
processing/: layer1.py
tests/: run_e2e_test.py  test_cpp_core.py  test_sprint2.py
tests/db/: chroma.sqlite3
